fix: fixed off centered header

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@ nav {
     box-shadow: 0 0 5px #000;
     ul{
         display: inline;
+        padding: 0;
     }
     li {
         list-style: none;
